src/parser/snapshots/monkey_language_server__parser__test__infix_unhappy_5.snap
---
source: src/parser/test.rs
description: "@ + 1"
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,0)->(0,1)),
    Err(UnexpectedToken("SyntaxError: Unexpected '+'."), (0,2)->(0,3)),
]

===================================

@ + 1
^ SyntaxError: Unexpected '@'.
  ^ SyntaxError: Unexpected '+'.
