src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_1.snap
---
source: src/parser/test.rs
description: let x = ;
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected ';'."), (0,8)->(0,9)),
]

===================================

let x = ;
        ^ SyntaxError: Unexpected ';'.
