src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_1_errors.snap
---
source: src/parser/test.rs
description: let x = ;
expression: "parser_errors(\"let x = ;\", errors)"
---
let x = ;
        ^ SyntaxError: Unexpected ';'.
