src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_3.snap
---
source: src/parser/test.rs
description: let;
expression: result
---
[
    Err(ExpectedTokenNotFound("SyntaxError: Expected '<identifier>' not found."), (0,3)->(0,4)),
]

===================================

let;
   ^ [Error] SyntaxError: Expected '<identifier>' not found.
