src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_4.snap
---
source: src/parser.rs
description: le a = 1;
expression: stmts
---
[
    Identifier {
        token: Token(Identifier, "le", (0,0)->(0,2)),
        name: "le",
    },
    Identifier {
        token: Token(Identifier, "a", (0,3)->(0,4)),
        name: "a",
    },
    Err(UnexpectedToken("SyntaxError: Unexpected '='."), (0,5)->(0,6)),
]
