src/parser/snapshots/monkey_language_server__parser__test__let_statement_broken_5.snap
---
source: src/parser/test.rs
description: let a = @;
expression: result
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,8)->(0,9)),
]

===================================

let a = @;
        ^ SyntaxError: Unexpected '@'.
